tests/test_resources/kadet_functions/fail_compile/__init__.py
from kapitan.inputs import kadet


def main(input_params):
    raise ValueError("This function will fail to compile")
